--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
     "@iobroker/testing": "^4.1.3",
     "@tsconfig/node18": "^18.2.4",
     "@types/node": "^18.19.68",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.13.0",
     "prettier": "^3.4.2",
     "typescript": "~5.7.2"
   },
