--- a/package.json
+++ b/package.json
@@ -21,32 +21,33 @@
     "node": ">= 18"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.3.1",
-    "axios": "^1.11.0",
+    "@iobroker/adapter-core": "^3.3.2",
+    "axios": "^1.13.5",
+    "axios-retry": "^4.5.0",
     "crypto-js": "^4.2.0",
-    "json2iob": "^2.6.17",
-    "mqtt": "^5.14.0",
+    "json2iob": "^2.6.22",
+    "mqtt": "^5.15.0",
     "pako": "^2.1.0"
   },
   "optionalDependencies": {
-    "canvas": "^3.1.2"
+    "canvas": "^3.2.1"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
     "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.33.0",
-    "@iobroker/testing": "^5.0.4",
-    "@tsconfig/node18": "^18.2.4",
-    "@types/node": "^22.17.1",
-    "eslint": "^9.33.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "@iobroker/testing": "^5.2.2",
+    "@tsconfig/node18": "^18.2.6",
+    "@types/node": "^22.19.11",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-prettier": "^5.5.5",
     "globals": "^15.15.0",
-    "prettier": "^3.6.2",
-    "typescript": "~5.9.2"
+    "prettier": "^3.8.1",
+    "typescript": "~5.9.3"
   },
   "main": "main.js",
   "files": [
